[package]
name = "dioxus_simple_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
gloo-intersection = { path = "../.." }
gloo-utils = "^0.1"
web-sys = { version = "^0.3", features = ['Element'] }
gloo-console = "0.2.3"
wasm-bindgen = "0.2.83"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
